syntax = "proto3";

// 从 App 的“设计蓝图”里发现的依赖
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

// --- [ 枚举定义 ] ---
// 从 course_detail_comment.proto 的蓝图里复原

enum CourseDetailCourseCommentEnableState {
  COURSE_DETAIL_COURSE_COMMENT_ENABLE_STATE_NONE = 0;
  COURSE_DETAIL_COURSE_COMMENT_ENABLE_STATE_ENABLED = 1;
  COURSE_DETAIL_COURSE_COMMENT_ENABLE_STATE_DISABLED = 2;
}

enum CourseDetailCourseCommentLikeType {
  COURSE_DETAIL_COURSE_COMMENT_LIKE_TYPE_NONE = 0;
  COURSE_DETAIL_COURSE_COMMENT_LIKE_TYPE_LIKE = 1;
}


// --- [ 消息定义 ] ---

// --- 评论相关的“小包裹” (根据新情报精确复原) ---

message CourseDetailCourseCommentAuthorInfo {
  string username = 1;
  string avatar_url = 2;
  string avatar_id_text = 3;
}

message CourseDetailCourseCommentBody {
  string content = 1;
}

message CourseDetailCourseCommentRateInfo {
  int32 star = 1;
}

message CourseDetailCourseCommentLikeInfo {
  int32 like_total = 1;
  CourseDetailCourseCommentLikeType self_like = 2;
}

message CourseDetailCourseCommentItem {
  int64 comment_id = 1;
  CourseDetailCourseCommentAuthorInfo author_info = 2;
  CourseDetailCourseCommentBody body = 3;
  CourseDetailCourseCommentLikeInfo like_info = 4;
  optional CourseDetailCourseCommentRateInfo rate_info = 5;
  bool self_comment = 6;
  google.protobuf.Timestamp create_time = 7;
}

// ❗️❗️❗️ 本次更新的核心 ❗️❗️❗️
// 我们现在来精确定义那个“集装箱”里的货物
message CourseDetailCourseCommentEnableInfo {
    repeated CourseDetailCourseCommentItem course_comment = 1;
    int32 total = 2;
}

// 这是我们最想要的“宝藏”
message CourseDetailCourseCommentInfo {
  CourseDetailCourseCommentEnableState enable_state = 1;
  google.protobuf.Any data = 2; // data 字段里装着 EnableInfo
}


// --- 其他占位符定义 ---
message CourseDetailCourseGradeStatInfo { }
message CourseDetailCourseRateInfo { }
message CourseDetailCreateReviewInfo { }
message CourseDetailSelfReviewInfo { }
message CourseDetailUIConfig { }


// --- 核心消息定义 (根据之前的蓝图复原) ---

message GetCourseDetailRequest {
  string id = 1;
}

message GetCourseDetailResponse {
  CourseDetailCourseGradeStatInfo course_grade_stat_info = 1;
  CourseDetailCourseRateInfo rate_info = 2;
  CourseDetailCreateReviewInfo create_review_info = 3;
  CourseDetailCourseCommentInfo course_comment_info = 4;
  CourseDetailSelfReviewInfo self_review_info = 5;
  CourseDetailUIConfig ui_config = 1000;
}

message GetCourseDetailMatchRequest {
  string course_name = 1;
  string instructor = 2;
}

message GetCourseDetailMatchResponse {
  bool success = 1;
  optional string course_table_id = 2;
  optional GetCourseDetailResponse page = 3;
  string message = 4;
}

// --- 服务定义 ---
service CourseDetailService {
  rpc GetCourseDetailMatch(GetCourseDetailMatchRequest) returns (GetCourseDetailMatchResponse);
  // ... 其他 RPC 方法可以根据需要添加
}
